# quantization-saliency-audit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
results/analysis/: addendum.json  int4_down_proj_l2.json  int4_rank_stability.json  review_robustness.json  split_half_reliability.json  summary.json  summary.json.provenance.json  symmetric_controls.json
results/pythia/analysis/: addendum.json  review_robustness.json  split_half_reliability.json  summary.json  summary.json.provenance.json  symmetric_controls.json
results/smollm2/analysis/: addendum.json  review_robustness.json  summary.json  (+3 more)
scripts/: 01_collect_calibration.py  02_compute_scores.py  02b_owq_residual.py  03_ground_truth.py  03b_fp64_recheck.py  03c_threshold_validation.py  03d_split_half_reliability.py  03e_int4_rank_stability.py  04_analysis.py  04b_addendum.py  04c_symmetric_controls.py  04d_review_robustness.py  05_plots.py  06_guard_recheck.py  phase2_01_collect_calibration.py  phase2_02_compute_scores.py  phase2_03_ground_truth.py  phase2_04_analysis.py  phase2_05_plots.py  phase2_download_model.py  phase2_run_overnight.sh
src/qsal/: calibration.py  config.py  config_pythia.py  config_smollm2.py  groundtruth.py  hessian.py  models.py  phase2.py  plots.py  provenance.py  quantizers.py
tests/: conftest.py  test_analysis.py  test_analysis_extras.py  test_calibration.py  test_groundtruth.py  test_groundtruth_pythia.py  test_hessian.py  test_models.py  test_models_pythia.py  test_models_smollm2.py  test_phase2.py  test_provenance.py  test_quantizers.py  test_scores.py
(+11 files in other folders)
