[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qsal"
version = "0.1.0"
description = "Quantization saliency agreement study (measurement study)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: needs the real model/dataset (deselect with -m 'not slow')"]
